style.css
/* @import "./normalize.css";
@import '@fontsource/noto-color-emoji';
@import '@fontsource-variable/noto-emoji';
@import '@fontsource/fira-mono';
@import '@fontsource-variable/bitter';
@import '@fontsource-variable/inter'; */

:root {
    --font-body: 'Inter Variable', 'Noto Color Emoji', sans-serif;
	--font-heading: 'Bitter Variable', 'Noto Color Emoji', serif;
	--font-mono: 'Fira Mono', 'Noto Color Emoji', monospace;
    --color-primary: #367264FF;
    --color-secondary: #81211EFF;
    --color-tertiary: #4D0B1EFF;
    color: white;
    font-size: 20px;
    font-family: var(--font-body);
    line-height: 1.5;
}

/* * {
    margin: 0px;
    padding: 0px;
} */

body {
    background-color: var(--color-primary);
    padding: 1em 2em;
}

h1, h2, h3, h4, h5, h6{
    text-shadow: black 0px 0px 10px;
    font-family: var(--font-heading);
    margin: 0em;
}

h1 {
    line-height: 1.15;
    margin-bottom: 0.25em;
}

p {
    margin: 0em;
}

.title, .subtitle {
    text-shadow: black 0px 0px 10px;
    font-family: var(--font-mono);
    font-weight: bold;
}

.title {
    font-size: 1.75em;
    margin-top: 0em;
    margin-bottom: 0em;
}

.subtitle {
    margin-top: 0em;
    font-size: 1.2em;
}

.title-container {
    width: 100%;
}

.page-subtitle {
    margin-bottom: 1em;
}

.link-button {
    text-decoration: none;
    color: white;
    background-color: var(--color-secondary);
    padding: 0.25em 0.75em;
    font-weight: bold;
    font-size: 1.2em;
}

.chip-container {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 100%;
    padding: 0;
    margin: 0;
    margin-top: 1.5em;
    gap: 1em;
}

.chip {
    display: inline;
    background-color: var(--color-tertiary);
    padding: 0.25em 0.75em;
}

header {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    gap: 1em;
}

.links, nav {
    width: 100%;
    display: flex;
    gap: 1em;
    align-items: center;
    justify-content: flex-end;
    flex-wrap: wrap;
}

nav {
    margin: 2em 0em;
}

article {
    width: 45vw;
}

.description {
    background-color: var(--color-secondary);
    padding: 1em;
}

#ref-list {
    /* display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
    margin-top: 2em;
    gap: 1em; */
    display: grid;
    justify-content: flex-start;
    align-items: flex-start;
    grid-template-columns: repeat(auto-fit, 45vw);
    gap: 1em;
    margin-top: 2em;
}

.ref-container {
    /* max-width: 45vw; */
    padding: 1em;
    background-color: var(--color-secondary);
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-start;
    /* margin-right: auto; */
}

.ref-censor {
    position: relative;
    width: 100%;
}

.ref-censor-container {
    opacity: 1;
    transition: all 0.5s;
    transition-behavior: allow-discrete;
}

.ref-censor-container-clicked {
    visibility: hidden;
    opacity: 0;
}

.ref-censor-panel {
    position: absolute;
    background-color: black;
    /* backdrop-filter: blur(10rem); */
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

.ref-censor-text-container {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    /* display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-flow: column nowrap; */
}

.ref-censor-text-container p {
    padding: 1em;
    width: 100%;
    text-align: center;
    transform: translate(-50%, -50%);
    font-weight: bold;
    font-size: 1.25em;
    text-shadow: black 0px 0px 10px;
    user-select: none;
}

.ref-censor-reason {
    font-size: 1.5rem;
}

.ref-hidden {
    display: none;
}

.ref-image {
    width: 100%;
}

.lowres {
    image-rendering: crisp-edges;
}

.ref-info {
    display: flex;
    width: 100%;
    justify-content: space-between;
    font-size: 0.75em;
    margin-bottom: 0.5rem;
}

.ref-filename {
    text-align: right;
}

.ref-title {
    text-shadow: none;
    font-family: var(--font-body);
}

.ref-description {

    margin-bottom: 1em;
}

.ref-artist-info {
    background-color: var(--color-tertiary);
    padding: 1em;
    width: 100%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: flex-start;
}

.ref-artist-title {
    font-weight: bold;
}

.ref-artist-profile {
    background-color: var(--color-secondary);
    padding: 0.25em 0.75em;
    color: white;
    text-decoration: none;
    margin-top: 1em;
}

@supports (backdrop-filter: blur(10rem)) {
    .ref-censor-panel {
        background-color: transparent;
        backdrop-filter: blur(10rem);
        transition: all 0.5s;
        transition-behavior: allow-discrete;
    }

    .ref-censor-panel-clicked {
        visibility: hidden;
        backdrop-filter: blur(0rem);
    }
    
    .ref-censor-container-clicked {
        visibility: visible;
        opacity: 1;
    }

    .ref-censor-text-container {
        opacity: 1;
        transition: all 0.5s;
        transition-behavior: allow-discrete;
    }

    .ref-censor-text-container-clicked {
        visibility: hidden;
        opacity: 0;
    }
}

@media screen and (max-width: 1200px) {
    article {
        width: 40em;
    }

    /* .ref-container {
        max-width: 40em;
    } */

    #ref-list {
        grid-template-columns: repeat(auto-fit, 40em);
    }
}

@media screen and (max-width: 900px) {
    article {
        width: 100%;
    }

    /* .ref-container {
        max-width: 100%;
    } */
    
    #ref-list {
        grid-template-columns: repeat(auto-fit, 100%);
    }
}

@media screen and (max-width: 600px) {
    :root {
        font-size: 16px;
    }

    body {
        padding: 1em;
    }

    header {
        flex-flow: column nowrap;
    }

    .links {
        margin-top: 1em;
        justify-content: flex-start;
    }
}

/* noto-color-emoji-emoji-400-normal */
@font-face {
    font-family: 'Noto Color Emoji';
    font-style: normal;
    font-display: swap;
    font-weight: 400;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-color-emoji@latest/emoji-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/noto-color-emoji@latest/emoji-400-normal.woff) format('woff');
}

/* fira-mono-latin-400-normal */
@font-face {
    font-family: 'Fira Mono';
    font-style: normal;
    font-display: swap;
    font-weight: 400;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/fira-mono@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/fira-mono@latest/latin-400-normal.woff) format('woff');
    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}

/* bitter-latin-wght-normal */
@font-face {
    font-family: 'Bitter Variable';
    font-style: normal;
    font-display: swap;
    font-weight: 100 900;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/bitter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}

/* inter-latin-wght-normal */
@font-face {
    font-family: 'Inter Variable';
    font-style: normal;
    font-display: swap;
    font-weight: 100 900;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}

